<resources>
    <string name="app_name">Basketball Game App</string>
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="team_a_score">0</string>
    <string name="team_b_score">0</string>
    <string name="three_point_btn">+3 Pts</string>
    <string name="two_point_btn">+2 Pts</string>
    <string name="free_throw_btn">+1 Pts</string>
    <string name="reset_btn">Reset</string>
    <string name="hypen">-</string>
    <string name="save">Save</string>
    <string name="display">Display</string>
    <string name="game_info_saved">Game Info Saved</string>
    <string name="cute_btn">Cute!</string>
    <string name="cute_dog">Cutest Dog Ever!</string>
    <string name="ugly_dog">Ugliest Dog Ever!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>