<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="fill"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teamAScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoText="true"
                android:duplicateParentState="true"
                android:editable="false"
                android:fontFamily="@font/bungee_shade"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxWidth="50dp"
                android:singleLine="true"
                android:text="@string/team_a_score"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#C11919"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hypen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_shade"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/hypen"
                android:textColor="#000000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/teamBScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:duplicateParentState="false"
                android:editable="false"
                android:fontFamily="@font/bungee_shade"
                android:gravity="center"
                android:maxWidth="50dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/team_b_score"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#2196F3"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/teamAImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />

                <EditText
                    android:id="@+id/teamALabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Team A"
                    android:gravity="center"
                    android:text="@string/team_a_name"
                    android:textColor="#F44336"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/teamAThreePointBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/three_point_btn" />

                <Button
                    android:id="@+id/teamATwoPointBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/two_point_btn" />

                <Button
                    android:id="@+id/teamAFreeThrowBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/free_throw_btn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/teamBImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />

                <EditText
                    android:id="@+id/teamBLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team_b_name"
                    android:textColor="#2196F3"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/teamBThreePointBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/three_point_btn" />

                <Button
                    android:id="@+id/teamBTwoPointBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/two_point_btn" />

                <Button
                    android:id="@+id/teamBFreeThrowBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/free_throw_btn" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_btn" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/displayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/display" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
